[gd_scene load_steps=37 format=3 uid="uid://bybpcigtcc037"]

[ext_resource type="Script" path="res://scripts/enemies/bengal/bengal.gd" id="1_85urr"]
[ext_resource type="Texture2D" uid="uid://ct7garay0ylf8" path="res://sprites/enemies/bengal/attack/2c92ec91-f50c-4794-8949-dfbf6256135d.png" id="1_daq7n"]
[ext_resource type="Shader" path="res://scenes/enemies/bengal.gdshader" id="2_iq6pa"]
[ext_resource type="Texture2D" uid="uid://q6wtgk1nh60g" path="res://sprites/enemies/bengal/attack/333e689f-a263-4c71-a5ac-a4897af65ebd.png" id="2_rdrsa"]
[ext_resource type="Texture2D" uid="uid://px444g7a24cw" path="res://sprites/enemies/bengal/attack/41479565-36b1-4e8f-9abe-d43a21d8e91a.png" id="3_n68bh"]
[ext_resource type="Texture2D" uid="uid://cj6tnejlmv8lb" path="res://sprites/enemies/bengal/attack/a9b7fece-253b-4c1e-b366-d18b9ad7865e.png" id="4_whfvx"]
[ext_resource type="Texture2D" uid="uid://kvjgqvpshnrm" path="res://sprites/enemies/bengal/attack/bbb6ad1d-b052-4501-9429-cbb79da5b60a.png" id="5_mynhv"]
[ext_resource type="Texture2D" uid="uid://yj5yfp14rhes" path="res://sprites/enemies/bengal/attack/dbf227aa-e65b-45aa-8333-9a013a87cce0.png" id="6_jgvlt"]
[ext_resource type="Texture2D" uid="uid://bwqb8oedrilrw" path="res://sprites/enemies/bengal/idle/0bd58ecc-058d-44a7-8e7b-d2ca6ed19bfb.png" id="7_1l4td"]
[ext_resource type="Texture2D" uid="uid://cj833a4lelas6" path="res://sprites/enemies/bengal/idle/9b2f4bb5-5222-4229-8a8e-713f2166799e.png" id="8_iiu0e"]
[ext_resource type="Texture2D" uid="uid://deagdrnx2j3i7" path="res://sprites/enemies/bengal/idle/b4030940-72d2-4407-b26f-f179b6faa023.png" id="9_00uhu"]
[ext_resource type="Texture2D" uid="uid://bac3lxatu3vgg" path="res://sprites/enemies/bengal/idle/f5a7e798-d164-4a94-8c0c-48a7deef6f1b.png" id="10_p8cdv"]
[ext_resource type="Texture2D" uid="uid://cjvyiqgkextny" path="res://sprites/enemies/bengal/run/08b37347-5c6d-45de-9078-ff7ece71f539.png" id="11_i045q"]
[ext_resource type="Texture2D" uid="uid://c52vsolpirnq1" path="res://sprites/enemies/bengal/death/bengalaMorrendo1.png" id="11_ksgix"]
[ext_resource type="Texture2D" uid="uid://n1dqlbdkhhv0" path="res://sprites/enemies/bengal/run/a5036d95-51c1-4626-ac2a-db789cb54b3b.png" id="12_w0frw"]
[ext_resource type="Texture2D" uid="uid://duxd3wrgjtwge" path="res://sprites/enemies/bengal/death/bengalaMorrendo2.png" id="12_xaqrr"]
[ext_resource type="Texture2D" uid="uid://du35do7objaw3" path="res://sprites/enemies/bengal/run/a8951941-5a43-4c0d-b21d-3ab005443234.png" id="13_8wafe"]
[ext_resource type="Texture2D" uid="uid://bl276qp7tui0g" path="res://sprites/enemies/bengal/death/bengalaMorrendo3.png" id="13_p4ql6"]
[ext_resource type="Texture2D" uid="uid://dnl10jkp0ea7l" path="res://sprites/enemies/bengal/death/bengalaMorrendo4.png" id="14_3bwjg"]
[ext_resource type="Texture2D" uid="uid://bxp0ohvmx5ra7" path="res://sprites/enemies/bengal/run/b12399bc-2f94-4b96-906e-dda4c3cb12bb.png" id="14_xl22g"]
[ext_resource type="Texture2D" uid="uid://eml7rhrnm8pb" path="res://sprites/enemies/bengal/run/c28906ec-11d3-4443-b193-9a1b11be5b06.png" id="15_qcv2r"]
[ext_resource type="Texture2D" uid="uid://cs4dvny84c8nj" path="res://sprites/enemies/bengal/run/d5a8d651-b256-4c76-8330-9b0caa8f85cb.png" id="16_4deyg"]
[ext_resource type="Texture2D" uid="uid://dxnhj7karxyf8" path="res://sprites/enemies/bengal/run/dc06bb61-c89d-476f-b26f-f81211538c58.png" id="17_sui1e"]
[ext_resource type="Texture2D" uid="uid://blk6so6smj525" path="res://sprites/enemies/bengal/run/ef3d9311-e7ec-403c-811d-6901178b41bd.png" id="18_w0kuf"]
[ext_resource type="Texture2D" uid="uid://be5e7270emyk7" path="res://sprites/enemies/bengal/run/f8b61836-900c-411f-a797-be35a7d31720.png" id="19_g2k7c"]
[ext_resource type="Script" path="res://scripts/states/stateMachine.gd" id="21_27868"]
[ext_resource type="Script" path="res://scripts/states/enemies/enemyIdle.gd" id="22_c7au7"]
[ext_resource type="Script" path="res://scripts/states/enemies/enemyChase.gd" id="23_87u8o"]
[ext_resource type="AudioStream" uid="uid://db7w840tomvgc" path="res://assets/fx/effects/bengalDamageEffect.mp3" id="24_h6jjf"]
[ext_resource type="Script" path="res://scripts/enemies/bengal/attackState.gd" id="25_adbba"]
[ext_resource type="Texture2D" uid="uid://b1km6mhr62sgm" path="res://sprites/enemies/groundShadow.png" id="25_fhe5l"]
[ext_resource type="Script" path="res://scripts/enemies/bengal/deadBengal.gd" id="30_6l3gs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r6wjy"]
resource_local_to_scene = true
shader = ExtResource("2_iq6pa")
shader_parameter/blinkColor = Color(1, 1, 1, 1)
shader_parameter/blinkIntesity = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_l3eov"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_daq7n")
}, {
"duration": 1.0,
"texture": ExtResource("2_rdrsa")
}, {
"duration": 1.0,
"texture": ExtResource("3_n68bh")
}, {
"duration": 1.0,
"texture": ExtResource("4_whfvx")
}, {
"duration": 1.0,
"texture": ExtResource("5_mynhv")
}, {
"duration": 1.0,
"texture": ExtResource("6_jgvlt")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ksgix")
}, {
"duration": 1.0,
"texture": ExtResource("12_xaqrr")
}, {
"duration": 1.0,
"texture": ExtResource("13_p4ql6")
}, {
"duration": 1.0,
"texture": ExtResource("14_3bwjg")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_1l4td")
}, {
"duration": 1.0,
"texture": ExtResource("8_iiu0e")
}, {
"duration": 1.0,
"texture": ExtResource("9_00uhu")
}, {
"duration": 1.0,
"texture": ExtResource("10_p8cdv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_sui1e")
}, {
"duration": 1.0,
"texture": ExtResource("16_4deyg")
}, {
"duration": 1.0,
"texture": ExtResource("19_g2k7c")
}, {
"duration": 1.0,
"texture": ExtResource("12_w0frw")
}, {
"duration": 1.0,
"texture": ExtResource("18_w0kuf")
}, {
"duration": 1.0,
"texture": ExtResource("11_i045q")
}, {
"duration": 1.0,
"texture": ExtResource("15_qcv2r")
}, {
"duration": 1.0,
"texture": ExtResource("13_8wafe")
}, {
"duration": 1.0,
"texture": ExtResource("14_xl22g")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ca3ds"]
radius = 8.69626
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7wf06"]
radius = 12.0
height = 36.0

[node name="bengal" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_85urr")

[node name="bengalAnimation" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_r6wjy")
scale = Vector2(1.00796, 0.990647)
sprite_frames = SubResource("SpriteFrames_l3eov")
animation = &"death"
frame = 3
frame_progress = 1.0

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(1.14992, 1)
shape = SubResource("CapsuleShape2D_ca3ds")

[node name="detectionArea" type="Area2D" parent="."]

[node name="detectionCircle" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CapsuleShape2D_7wf06")

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("21_27868")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "texture")]
script = ExtResource("22_c7au7")
enemy = NodePath("../..")
texture = NodePath("../../bengalAnimation")

[node name="chase" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "texture")]
script = ExtResource("23_87u8o")
enemy = NodePath("../..")
texture = NodePath("../../bengalAnimation")

[node name="attack" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "texture", "fx")]
script = ExtResource("25_adbba")
enemy = NodePath("../..")
texture = NodePath("../../bengalAnimation")
fx = NodePath("../../damage")

[node name="death" type="Node" parent="stateMachine" node_paths=PackedStringArray("enemy", "anim")]
script = ExtResource("30_6l3gs")
enemy = NodePath("../..")
anim = NodePath("../../bengalAnimation")

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_h6jjf")
volume_db = -20.0
bus = &"fx"

[node name="bengalDeath" type="AudioStreamPlayer2D" parent="."]

[node name="shadow" type="Sprite2D" parent="."]
position = Vector2(-4, 20)
scale = Vector2(0.3, 0.3)
texture = ExtResource("25_fhe5l")

[node name="flashTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="deadBengal" from="." to="stateMachine/Idle" method="_on_bengal_dead_bengal"]
[connection signal="deadBengal" from="." to="stateMachine/chase" method="_on_bengal_dead_bengal"]
[connection signal="deadBengal" from="." to="stateMachine/attack" method="_on_bengal_dead_bengal"]
[connection signal="animation_finished" from="bengalAnimation" to="stateMachine/chase" method="_on_bengal_animation_animation_finished"]
[connection signal="animation_finished" from="bengalAnimation" to="stateMachine/death" method="_on_bengal_animation_animation_finished"]
[connection signal="area_entered" from="detectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="body_entered" from="detectionArea" to="stateMachine/chase" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="stateMachine/chase" method="_on_detection_area_body_exited"]
[connection signal="Transitioned" from="stateMachine/Idle" to="stateMachine" method="_on_idle_transitioned"]
[connection signal="Transitioned" from="stateMachine/chase" to="stateMachine" method="_on_chase_transitioned"]
[connection signal="Transitioned" from="stateMachine/attack" to="stateMachine" method="_on_attack_transitioned"]
[connection signal="timeout" from="flashTimer" to="." method="_on_flash_timer_timeout"]
